# holoscan-sensor-bridge

./: cam678_emulator  cam678_emulator.cpp  i2c_logging_emulator  i2c_logging_emulator.cpp
examples/: cam380_example.py  cam678_example  cam678_example.cpp  cam678_example.py
python/hololink/sensors/camera/: CMakeLists.txt  __init__.py
python/hololink/sensors/camera/cam380/: CMakeLists.txt  __init__.py  bindings.cpp
python/hololink/sensors/camera/cam678/: CMakeLists.txt  __init__.py  bindings.cpp
src/hololink/sensors/camera/: CMakeLists.txt
src/hololink/sensors/camera/cam380/: CMakeLists.txt  native_cam380_sensor.cpp  native_cam380_sensor.hpp
src/hololink/sensors/camera/cam678/: CMakeLists.txt  native_cam678_sensor.cpp  native_cam678_sensor.hpp
